--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@
 
 }
 
+/** Footer Section **/
 
 .footer {
     background-color: #232323;
@@ -113,10 +114,23 @@
 
 .footer-sections {
     display: flex;
-    align-items: center;
+    align-items: top;
     justify-content: space-around;
     margin-top: 30px;
     margin-bottom: 30px;
+}
+
+.social-links a {
+    text-decoration: none;
+}
+
+.social-links a:visited {
+    color: rgb(204, 204, 204);
+}
+
+.social-links a:hover {
+    color: rgb(87, 111, 245);
+    border-bottom: rgb(87, 111, 245) 1px solid;
 }
 
 .land {
