--- a/style.css
+++ b/style.css
@@ -81,9 +81,9 @@ p {
 .project {
     max-width: 600px;
     margin-bottom: 30px;
-    border: 2px solid black;
+    /* border: 1px solid rgb(163, 163, 163);/ */
     padding: 10px;
-    box-shadow: 8px 8px rgb(0, 0, 0);
+    /* box-shadow: 8px 8px rgb(0, 0, 0); */
 
 }
 
